# smouth-os

./: .bazeliskrc  .bazelrc  .gitignore  .travis.yml  AGENTS.md  BUILD  BUILD.bazel  Dockerfile  LICENSE  README.md  WORKSPACE  build.zig  build.zig.zon  config.sh  embed.zig  flake.nix  qemu.py  qemu.sh  shell.nix  test.sh
.external/toolchain-i686-elf/: .gitattributes  BUILD.bazel  WORKSPACE
.github/workflows/: ci.yml  continuous_test.yml  docker.yml
cxx/: BUILD.bazel  atexit.cc  atexit.h  kernel.cc  kernel.h  memcpy.cc  memcpy.h  new.cc  new.h  stack_smashing_protector.cc  stack_smashing_protector.h  stack_smashing_protector_ktest.cc  virtual.cc  virtual.h
docs/: memory.md  roadmap.md
docs/design/: design_notes1.md  memory.md  roadmap.md
kernel/: BUILD  BUILD.bazel  Makefile  kernel.cc  kernel_test.cc  templates.bzl
kernel/arch/: BUILD  BUILD.bazel  arch.bzl  boot.h  gdt.h  init.h  init_ktest.cc  io_port.h  memory.h  memory_detection.h  serial.cc  serial.h  tty.h
kernel/arch/common/: BUILD.bazel  empty.h  memory.h  serial.h  tty.cc  tty.h
kernel/arch/i386/: BUILD  BUILD.bazel  boot.S  crti.S  crtn.S  gdt.cc  gdt_flush.S  init.cc  linker.ld  pc_speaker.cc  pc_speaker.h  pc_speaker_ktest.cc  tty.cc
kernel/arch/i386/boot/: BUILD  BUILD.bazel  boot.S  boot.cc  boot.h  crtn.S  dummy_handler.cc  dummy_isr.S  dummy_isr.cc  dummy_isr.h  gdt.cc  gdt.h  gdt_flush.S  gdt_installer.cc  gdt_installer.h  gdt_test.cc  meminfo.cc  meminfo.h  mmap_manager.cc  mmap_manager.h  mmap_manager_test.cc  multiboot.h  multiboot_test.cc  pre_kernel_main.cc
kernel/arch/i386/gdt/: BUILD  BUILD.bazel  flush.S  flush.cc  flush.h  gdt.cc  gdt.h  gdt_installer.cc  gdt_installer.h  gdt_test.cc  table.cc  table.h  table_test.cc
kernel/arch/i386/init/: BUILD.bazel  boot.S  dummy_isr.cc  init.cc
kernel/arch/i386/instructions/: BUILD  BUILD.bazel  instructions.h  instructions_cpuid_ktest.cc  instructions_rdtsc_ktest.cc  instructions_sp_ktest.cc
kernel/arch/i386/interrupt/: BUILD  BUILD.bazel  descriptor.cc  descriptor.h  descriptor_test.cc  interrupt_ktest.cc  isrs.cc  isrs.h  macros.h  table.cc  table.h  table_test.cc
kernel/arch/i386/interrupt/isrs/: BUILD.bazel  interrupt_service_routine.bzl  isr.S  isrs.S
kernel/arch/i386/io/: BUILD.bazel  io_port.cc  serial.cc  serial.h
kernel/arch/i386/io_port/: BUILD  BUILD.bazel  io_port.cc  io_port.h
kernel/arch/i386/memory/: BUILD  BUILD.bazel  linear.cc  linear.h  linear_test.cc  memory.cc
kernel/arch/i386/memory_detection/: BUILD  memory_detection.cc
kernel/arch/i386/serial/: BUILD.bazel  serial.cc  serial.h
kernel/arch/i386/tty/: BUILD  BUILD.bazel  tty.cc  vga.h
kernel/arch/local/: BUILD  gdt.cc  tty.cc
kernel/arch/local/boot/: BUILD
kernel/arch/local/gdt/: BUILD  gdt.cc
kernel/arch/local/memory/: BUILD  memory.cc
kernel/arch/local/memory_detection/: BUILD  memory_detection.cc
kernel/arch/local/tty/: BUILD  tty.cc
kernel/arch/mock/: BUILD.bazel
kernel/arch/mock/init/: BUILD.bazel
kernel/arch/mock/serial/: serial.cc  serial.h
kernel/core/: BUILD.bazel  init.cc  init.h  init_ktest.cc  memory.h  memory_ktest.cc  memory_test.cc
kernel/cxx/: BUILD  BUILD.bazel  abi.cc  abi.h  new.cc  new.h
kernel/include/kernel/: gdt.h  tty.h
kernel/kernel/: kernel.c  kernel.cc  kernelstub.cc
kernel/memory/: BUILD  memory.cc  memory.h  memory_test.cc
kernel/src/: boot.s  kernel.cc  linker.ld
kernel/testing/: BUILD.bazel  macros.h  macros_ktest.cc  stack_smashing_protector_ktest.cc
kernel/util/: BUILD  BUILD.bazel  either.h  either_test.cc  panic.cc  panic.h  status.cc  status.h  status_test.cc
libc/: BUILD.bazel  Makefile  assert.h  kernel.cc  kernel.h  mock_kernel.h  stdio.h  stdio_test.cc  stdlib.h  string.h
libc/include/: stdio.h  stdlib.h  string.h
libc/stdio/: BUILD  BUILD.bazel  printf.c  printf.cc  printf.h  printf_test.cc  putchar.cc  putchar.h  puts.cc  puts.h  stdio.cc
libc/stdio/internal/: BUILD.bazel  printer.h
libc/stdlib/: BUILD  abort.c  abort.cc  abort.h  arithmetic.c  arithmetic.cc  arithmetic.h
libc/string/: BUILD  mem.h  memcmp.c  memcmp.cc  memcpy.c  memcpy.cc  memmove.c  memmove.cc  memset.c  memset.cc  str.h  strchr.cc  strcmp.cc  strlen.cc
libc/test/stdio/: test_printf.c
src/: gdt.zig  ioport.zig  log.zig  main.zig  panic.zig  root.zig  serial.zig  sync.zig
src/arch/: root.zig
src/kernel/: debug.zig  dwarf.zig  gdt.zig  idt.zig  init.zig  io.zig  ioport.zig  iotest.zig  log.zig  main.zig  panic.zig  pci.zig  pcspeaker.zig  root.zig  serial.zig  std_options.zig  sync.zig  time.zig  virtio.zig  virtio_sound.zig  wav.zig
src/stdk/: Dwarf.zig  README.md  debug.zig  root.zig  testing.zig
testing/: BUILD.bazel  assert.h  assert_test.cc
tools/: BUILD  CROSSTOOL  bazel.rc  copytree.zig  embed.zig  install-binutils.sh  install-gcc.sh  install.sh  testrunner.zig
tools/builddefs/: BUILD.bazel  arch_file.bzl  arch_library.bzl  crt_file.bzl  kernel_binary.bzl  kernel_test.bzl  qemu_binaries.bzl  qemu_test.bzl
tools/checksums/: bazel  bazel-0.29.0-installer-darwin-x86_64  bazel-0.29.0-installer-darwin-x86_64.sh.sha256  bazel-0.29.0-installer-linux-x86_64.sh.sha256  (+3 more)
tools/go/cmd/genbuild/: BUILD.bazel  main.go
tools/go/cmd/genh/: BUILD.bazel  main.go
tools/go/cmd/qemu/: BUILD.bazel  qemu.go
tools/qemu/: BUILD  BUILD.bazel  qemu.py
tools/toolchain/: BUILD  BUILD.bazel  CROSSTOOL  premade_toolchain_repository.bzl  toolchain.BUILD  toolchain.bzl  toolchain_config.bzl  toolchain_repository.bzl
tools/toolchain/binaries/: gcc
tools/toolchain/binaries/i686-elf/toolchain-i686-elf/: gcc
tools/toolchain/binaries/i686-elf/toolchain-i686-elf-darwin/: BUILD.bazel  gcc
tools/toolchain/binaries/i686-elf/toolchain-i686-elf-linux/: gcc
tools/toolchain/i686-elf/: BUILD  BUILD.bazel  CROSSTOOL  ar  gcc  gcov  toolchain_config.bzl
util/: BUILD.bazel  check.h  either.h  either_test.cc  list.h  list_test.cc  meta_macros.h  optional.h  overload_macros.h  ret_checkf.cc  ret_checkf.h  ret_checkf_test.cc  status.cc  status.h  status_test.cc  statusf.h  statusf_test.cc
(+74 files in other folders)
