cc_library(
    name = "kernel",
    srcs = [
        "kernel.cc",
    ],
    hdrs = [
        "kernel.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//util:status",
    ],
)

cc_library(
    name = "cxx",
    visibility = [
        "//visibility:public",
    ],
    deps = select({
        "//tools/toolchain:i386": [
            ":atexit",
            ":memcpy",
            ":virtual",
            ":new",
        ],
        "//conditions:default": [
            ":new",
        ],
    }),
)

cc_library(
    name = "virtual",
    srcs = [
        "virtual.cc",
    ],
    hdrs = [
        "virtual.h",
    ],
    deps = [
        ":kernel",
    ],
)

cc_library(
    name = "atexit",
    srcs = [
        "atexit.cc",
    ],
    hdrs = [
        "atexit.h",
    ],
)

cc_library(
    name = "new",
    srcs = [
        "new.cc",
    ],
    hdrs = [
        "new.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":kernel",
    ],
)

cc_library(
    name = "memcpy",
    srcs = [
        "memcpy.cc",
    ],
    hdrs = [
        "memcpy.h",
    ],
)
