package(default_visibility = ["//visibility:public"])

load("//kernel:templates.bzl", "kernel_binary", "kernel_test")

kernel_binary(
    name = "kernel",
    srcs = [
        "kernel.cc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/arch:init",
        "//libc:stdio",
        "//util:check",
    ],
)

kernel_test(
    name = "kernel_test",
    srcs = [
        "kernel_test.cc",
    ],
    deps = [
        "//kernel/arch:init",
        "//libc:stdio",
        "//util:check",
    ],
)
