package(default_visibility = ["//visibility:public"])

load("//kernel:templates.bzl", "kernel_binary", "kernel_test")

kernel_binary(
    name = "kernel",
    srcs = [
        "kernel.cc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/arch:init",
        "//kernel/core:init",
        "//libc:stdio",
        "//util:check",
    ],
)
