load("//tools/builddefs:kernel_binary.bzl", "kernel_binary")

kernel_binary(
    name = "kernel",
    srcs = [
        "kernel.cc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/arch:init",
        "//kernel/core:init",
        "//libc:stdio",
        "//util:check",
    ],
)
