package(default_visibility = ["//visibility:public"])

cc_library(
    name = "assert",
    testonly = 1,
    hdrs = [
        "assert.h",
    ],
    deps = [
        "//util:meta_macros",
        "//util:status",
    ],
)

cc_test(
    name = "assert_test",
    size = "small",
    srcs = [
        "assert_test.cc",
    ],
    deps = [
        ":assert",
        "//util:status",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
