load("//kernel/arch:arch.bzl", "arch_file", "arch_library")

package(default_visibility = ["//visibility:public"])

arch_library(
    name = "init",
    deps = [
        "//kernel/arch/common:memory",
        "//kernel/arch/common:serial",
        "//kernel/arch/common:tty",
    ],
)

arch_file(name = "crti")

arch_file(name = "crtn")

arch_file(name = "linker.ld")
