load("//kernel/arch:arch.bzl", "arch_file", "arch_library")
load("//kernel:templates.bzl", "kernel_test")

package(default_visibility = [
    "//cxx:__subpackages__",
    "//kernel:__subpackages__",
])

exports_files(["init.h"])

arch_library(
    name = "boot",
    hdrs = [],
)

arch_library(
    name = "init",
    deps = [
        "//kernel/arch/common:memory",
        "//kernel/arch/common:serial",
        "//kernel/arch/common:tty",
    ],
)

kernel_test(
    name = "init_ktest",
    srcs = [
        "init_ktest.cc",
    ],
    deps = [
        ":init",
        "//kernel/testing:macros",
        "//libc:stdio",
        "//util:check",
    ],
)

arch_file(name = "crti")

arch_file(name = "crtn")

arch_file(name = "linker.ld")
