cc_library(
    name = "abi",
    srcs = [
        "abi.cc",
    ],
    hdrs = [
        "abi.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "new",
    srcs = [
        "new.cc",
    ],
    hdrs = [
        "new.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//kernel/memory",
    ],
)
