load("//tools/builddefs:kernel_test.bzl", "kernel_test")

cc_library(
    name = "macros",
    hdrs = [
        "macros.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//libc:stdio",
        "//libc:stdlib",
        "//util:check",
        "//util:overload_macros",
        "//util:status",
    ],
)

kernel_test(
    name = "macros_ktest",
    srcs = [
        "macros_ktest.cc",
    ],
    deps = [
        ":macros",
    ],
)
