load("//tools/toolchain:toolchain.bzl", "toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "toolchain.BUILD",
])

config_setting(
    name = "i386",
    values = {
        "cpu": "i386",
    },
)

config_setting(
    name = "local",
    values = {
        "cpu": "k8",
    },
)

config_setting(
    name = "darwin",
    values = {
        "cpu": "darwin",
    },
)

toolchain(
    name = "cc-compiler-i686-elf-darwin",
    compiler = "g++",
    target = "i686-elf",
    target_cpu = "i386",
    workspace = "toolchain-i686-elf-darwin",
)

cc_toolchain_suite(
    name = "darwin-premade",
    toolchains = {
        "darwin": "@bazel_tools//tools/cpp:cc-compiler-darwin",
        "i386|g++": ":cc-compiler-i686-elf-darwin",
    },
)

toolchain(
    name = "cc-compiler-i686-elf-linux",
    compiler = "g++",
    target = "i686-elf",
    target_cpu = "i386",
    workspace = "toolchain-i686-elf-linux",
)

cc_toolchain_suite(
    name = "linux-premade",
    toolchains = {
        "darwin": "@bazel_tools//tools/cpp:cc-compiler-darwin",
        "i386|g++": ":cc-compiler-i686-elf-linux",
    },
)

toolchain(
    name = "cc-compiler-i686-elf",
    compiler = "g++",
    target = "i686-elf",
    target_cpu = "i386",
    workspace = "toolchain-i686-elf",
)

cc_toolchain_suite(
    name = "toolchain",
    toolchains = {
        "darwin": "@bazel_tools//tools/cpp:cc-compiler-darwin",
        "i386|g++": ":cc-compiler-i686-elf",
    },
)
