load("//tools/toolchain:toolchain.bzl", "toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "toolchain.BUILD",
])

config_setting(
    name = "i386",
    values = {
        "cpu": "i386",
    },
)

cc_toolchain_suite(
    name = "darwin-premade",
    tags = ["manual"],
    toolchains = {
        "i386|g++": ":cc-compiler-i686-elf-darwin",
    },
)

toolchain(
    name = "cc-compiler-i686-elf-darwin",
    compiler = "g++",
    tags = ["manual"],
    target = "i686-elf",
    target_cpu = "i386",
    workspace = "toolchain-i686-elf-darwin",
)

cc_toolchain_suite(
    name = "linux-premade",
    tags = ["manual"],
    toolchains = {
        "i386|g++": ":cc-compiler-i686-elf-linux",
    },
)

toolchain(
    name = "cc-compiler-i686-elf-linux",
    compiler = "g++",
    tags = ["manual"],
    target = "i686-elf",
    target_cpu = "i386",
    workspace = "toolchain-i686-elf-linux",
)

cc_toolchain_suite(
    name = "toolchain",
    tags = ["manual"],
    toolchains = {
        "i386|g++": ":cc-compiler-i686-elf",
    },
)

toolchain(
    name = "cc-compiler-i686-elf",
    compiler = "g++",
    tags = ["manual"],
    target = "i686-elf",
    target_cpu = "i386",
    workspace = "toolchain-i686-elf",
)
