package(default_visibility = ["//visibility:public"])

cc_library(
    name = "tty",
    srcs = [
        "tty.cc",
    ],
    hdrs = [
        "tty.h",
    ],
    deps = [
        "//libc:string",
    ],
)

cc_library(
    name = "memory",
    hdrs = [
        "memory.h",
    ],
    deps = [
        "//util:status",
    ],
)

cc_library(
    name = "serial",
    hdrs = [
        "serial.h",
    ],
)
