package(default_visibility = ["//visibility:public"])

# Export empty file to satisfy null dependency for arch files.
exports_files(["empty.h"])

# Export empty library to satisfy null dependency for arch libraries.
cc_library(
    name = "empty",
    hdrs = [
        "empty.h",
    ],
)

cc_library(
    name = "tty",
    srcs = [
        "tty.cc",
    ],
    hdrs = [
        "tty.h",
    ],
    deps = [
        "//libc:string",
    ],
)

cc_library(
    name = "memory",
    hdrs = [
        "memory.h",
    ],
    deps = [
        "//util:status",
    ],
)

cc_library(
    name = "serial",
    hdrs = [
        "serial.h",
    ],
)
