package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "boot",
    srcs = [
        "boot.S",
        "boot.cc",
    ],
    hdrs = [
        "boot.h",
    ],
    tags = ["i386-only"],
    deps = [
        ":multiboot",
    ],
)

cc_library(
    name = "multiboot",
    hdrs = [
        "multiboot.h",
    ],
)
