package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "boot",
    srcs = [
        "boot.S",
        "boot.cc",
    ],
    hdrs = [
        "boot.h",
    ],
    tags = [
        "i386",
        "i386-only",
    ],
    deps = [
        ":multiboot",
        "//cxx:kernel",
        "//kernel/arch/i386/io:io_port",
        "//kernel/arch/i386/io:serial",
        "//libc:kernel",
    ],
)

cc_library(
    name = "multiboot",
    hdrs = [
        "multiboot.h",
    ],
)
