package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "boot",
    srcs = [
        "boot.S",
    ],
    tags = [
        "i386-only",
    ],
    deps = [
        ":boot-internal",
    ],
)

cc_library(
    name = "boot-internal",
    srcs = [
        "boot.cc",
    ],
    hdrs = [
        "boot.h",
    ],
    tags = [
        "i386",
    ],
    deps = [
        ":multiboot",
        "//cxx:kernel",
        "//kernel/arch/i386/io:io_port",
        "//kernel/arch/i386/io:serial",
        "//libc:kernel",
    ],
)

cc_library(
    name = "multiboot",
    hdrs = [
        "multiboot.h",
    ],
)
