load("//kernel:templates.bzl", "kernel_library")

package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

kernel_library(
    name = "table",
    srcs = [
        "table.cc",
    ],
    hdrs = [
        "table.h",
    ],
    deps = [
        "//libc:string",
        "//util:list",
        "//util:status",
    ],
)

cc_test(
    name = "table_test",
    size = "small",
    srcs = [
        "table_test.cc",
    ],
    deps = [
        ":table",
        "//testing:assert",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

kernel_library(
    name = "flush",
    srcs = [
        "flush.S",
        "flush.cc",
    ],
    hdrs = [
        "flush.h",
    ],
    tags = [
        "manual",
    ],
    deps = [
        "//util:status",
    ],
)
