package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "table",
    srcs = [
        "table.cc",
    ],
    hdrs = [
        "table.h",
    ],
    deps = [
        "//libc:string",
        "//util:list",
        "//util:ret_checkf",
        "//util:status",
    ],
)

cc_test(
    name = "table_test",
    size = "small",
    srcs = [
        "table_test.cc",
    ],
    deps = [
        ":table",
        "//testing:assert",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "flush",
    srcs = [
        "flush.S",
        "flush.cc",
    ],
    hdrs = [
        "flush.h",
    ],
    tags = [
        "i386-only",
    ],
    deps = [
        "//util:ret_checkf",
        "//util:status",
    ],
)
