cc_library(
    name = "init",
    srcs = [
        "boot.S",
        "init.cc",
    ],
    tags = ["manual"],
    visibility = ["//kernel/arch:__pkg__"],
    deps = [
        ":multiboot",
        "//kernel/arch:boot",
        "//kernel/arch:memory",
        "//kernel/arch/common:tty",
        "//kernel/arch/i386/gdt:flush",
        "//kernel/arch/i386/gdt:table",
        "//kernel/arch/i386/instructions",
        "//kernel/arch/i386/interrupt:macros",
        "//kernel/arch/i386/interrupt:table",
        "//kernel/arch/i386/memory:linear",
        "//kernel/arch/i386/serial",
        "//libc:assert",
        "//libc:stdio",
        "//libc:string",
        "//util:check",
        "//util:optional",
        "//util:status",
    ],
)

cc_library(
    name = "multiboot",
    hdrs = [
        "multiboot.h",
    ],
    visibility = [
        "//kernel/arch/i386:__subpackages__",
    ],
)
