load("//kernel:templates.bzl", "kernel_test")

package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

cc_library(
    name = "instructions",
    hdrs = [
        "instructions.h",
    ],
    deps = [
        "//util:ret_checkf",
        "//util:status",
    ],
)

kernel_test(
    name = "instructions_rdtsc_ktest",
    srcs = [
        "instructions_rdtsc_ktest.cc",
    ],
    deps = [
        ":instructions",
        "//kernel/testing:macros",
    ],
)

kernel_test(
    name = "instructions_cpuid_ktest",
    srcs = [
        "instructions_cpuid_ktest.cc",
    ],
    deps = [
        ":instructions",
        "//kernel/testing:macros",
    ],
)

kernel_test(
    name = "instructions_sp_ktest",
    srcs = [
        "instructions_sp_ktest.cc",
    ],
    deps = [
        ":instructions",
        "//kernel/arch/i386/boot",
        "//kernel/testing:macros",
    ],
)
