load("//kernel:templates.bzl", "kernel_library")

package(default_visibility = ["//kernel/arch/i386:__subpackages__"])

kernel_library(
    name = "descriptor",
    hdrs = [
        "descriptor.h",
    ],
)

cc_test(
    name = "descriptor_test",
    size = "small",
    srcs = [
        "descriptor_test.cc",
    ],
    deps = [
        ":descriptor",
        "@googletest//:gtest",
    ],
)

kernel_library(
    name = "table",
    srcs = [
        "table.cc",
    ],
    hdrs = [
        "table.h",
    ],
    deps = [
        ":descriptor",
        "//kernel/util:status",
    ],
)

cc_test(
    name = "table_test",
    size = "small",
    srcs = [
        "table_test.cc",
    ],
    deps = [
        ":descriptor",
        ":table",
        "@googletest//:gtest",
    ],
)

kernel_library(
    name = "macros",
    hdrs = [
        "macros.h",
    ],
)
